# ImpedanceFitter

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
doc/: Documentation_python.tex  circuits.rst  cole_cole.rst  conf.py  double_shell.rst  elements.rst  examples.rst  fitting.rst  index.rst  main.rst  overview.rst  plotting.rst  postprocess.rst  readin.rst  requirements.txt  single_shell.rst  statistics.rst  utils.rst
docs/: Makefile  circuits.rst  conf.py  elements.rst  fitting.rst  index.rst  make.bat  utils.rst
examples/: statistics.py
impedancefitter/: FRABode2impedance.py  RC.py  __init__.py  __version__.py  bruggemanhanai.py  cole_cole.py  cole_cole_R.py  cole_cole_input.yaml  cole_cole_parameters.json  constants.py  constants.yaml  cpe.py  csv2impedance.py  cubic_roots.py  double_shell.py  double_shell_input.yaml  double_shell_parameters.json  double_shell_wall.py  double_shell_wall_ellipsoid.py  drc.py  ecis.py  elements.py  fitter.py  fra.py  gui.py  loss.py  main.py  particle_suspension.py  plotting.py  postprocess.py  randles.py  rc.py  readin.py  single_shell.py  single_shell_ellipsoid.py  single_shell_parameters.json  single_shell_wall.py  suspension_parameters.json  suspensionmodels.py  utils.py  (+1 more)
impedancefitter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
inputfiles/: single_shell_input.yaml  suspension_input.yaml
introduction/: Correction-Ambiguity.ipynb  First-model.ipynb  Fit-data.ipynb  Fitting-pitfalls.ipynb  greymattercolecole4gabriel.json  impedance1V_10.csv  impedance50mV_10.csv  intro_impedancefitter.tex
joss/: paper.bib  paper.md
tests/: MokuGo_47R_100R_shunt.csv  __init__.py  test_RC.py  test_circuits.py  test_cole_cole.py  test_cpe.py  test_cubic_solver.py  test_double_shell.py  test_double_shell_wall.py  test_elements.py  test_ellipsoid_suspensions_double_shell.py  test_ellipsoid_suspensions_double_shell_wall.py  test_ellipsoid_suspensions_single_shell.py  test_ellipsoid_suspensions_single_shell_wall.py  test_frabode.py  test_loss.py  test_main.py  test_parser.py  test_particle_suspension.py  test_postprocess.py  test_randles.py  test_readin.py  test_scheme.py  test_single_shell.py  test_single_shell_wall.py
(+101 files in other folders)
