[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "impedancefitter"
version = "2.0.9"
description = "Library for fitting impedance data to equivalent circuit models."
readme = "README.md"
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Leonard Thiele", email = "leonard.thiele@uni-rostock.de" },
    { name = "Julius Zimmermann", email = "julius.zimmermann@uni-rostock.de" }
]
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

dependencies = [
"pyyaml==6.0.1",
"xlrd==2.0.1",
"openpyxl==3.0.7",
"pandas>=1.0.1",
"openturns>=1.17",
"numpy==1.24.4",
"lmfit==1.0.3",
"numdifftools==0.9.39",
"corner==2.0.1",
"emcee==3.0.1",
"tqdm>=4.42.1",
"pyparsing",
"schemdraw==0.18",
"packaging"]

[project.optional-dependencies]
dev = ["black", "ruff", "pre-commit"]

doc = ["sphinx==3.0.3",
"jupyter_sphinx",
"sphinx-rtd-theme"]

all = ["impedancefitter[dev, doc]"]

[project.urls]
homepage = "https://impedancefitter.readthedocs.io/en/latest/"
repository = "https://github.com/j-zimmermann/impedancefitter"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
extend-select = ["E",  # style errors
 "W", # style warnings
 "F", # flakes
 "D", # pydocstyle 
 "C",# flake8-comprehensions
 "I", #isort
 "Q", # quotes
 "U" #pyupgrade
]

extend-ignore = [
    "D100", # Missing docstring in public module
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D205", # 1 blank line required between summary line and description
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D416", # Section name should end with a colon
]
